--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,9 @@
   --border-radius-sm: 4px;
   --border-radius-md: 8px;
   --border-radius-lg: 16px;
+  --border-radius-xl: 24px;
+  --border-radius-2xl: 32px;
+  --border-radius-3xl: 40px;
 }
 
 body {
